%% ============================================================
%% Modelo de Dados (ER) — Mestra AI
%% Referência: docs/blueprint/05-data-model.md
%% ============================================================

erDiagram
    pipelines {
        uuid id PK "Identificador único"
        varchar niche NOT NULL "Nicho do canal"
        varchar status NOT NULL "pending, running, completed, failed"
        text idea "Ideia gerada"
        jsonb script "Roteiro estruturado"
        jsonb scenes "Array de scenes"
        jsonb audio_segments "Segmentos de áudio"
        jsonb clips "Clips visuais"
        varchar video_path "Caminho do vídeo"
        varchar thumbnail_path "Caminho da thumbnail"
        jsonb metadata "Título, descrição, tags"
        varchar video_id "ID YouTube"
        uuid metrics_id FK "Referência para video_metrics"
        decimal performance_score "Score de performance"
        jsonb learning_state "Estado do learning"
        text error_message "Mensagem de erro"
        bigint duration_ms "Duração em ms"
        timestamp created_at "Criação"
        timestamp updated_at "Atualização"
    }

    video_metrics {
        uuid id PK "Identificador único"
        uuid pipeline_id FK "Referência para pipeline"
        varchar youtube_video_id NOT NULL "ID YouTube"
        timestamp published_at NOT NULL "Data publicação"
        integer views DEFAULT 0 "Total visualizações"
        integer likes DEFAULT 0 "Total likes"
        integer comments DEFAULT 0 "Total comentários"
        decimal retention "Retenção média %"
        decimal ctr "CTR %"
        decimal avg_watch_time "Tempo médio (segundos)"
        jsonb drop_off_points "Timestamps de abandono"
        jsonb retention_curve "Curva de retenção"
        timestamp created_at "Data de coleta"
    }

    learning_states {
        uuid id PK "Identificador único"
        varchar niche NOT NULL UNIQUE "Nicho do canal"
        jsonb hook_weights NOT NULL "Pesos para hooks"
        jsonb template_weights NOT NULL "Pesos para template"
        jsonb pacing_weights NOT NULL "Pesos para pacing"
        jsonb content_weights NOT NULL "Pesos para conteúdo"
        boolean is_active DEFAULT FALSE "Learning ativo"
        integer analyzed_videos DEFAULT 0 "Videos analisados"
        timestamp last_updated "Última atualização"
        timestamp created_at "Criação"
    }

    content_plans {
        uuid id PK "Identificador único"
        varchar niche NOT NULL "Nicho do canal"
        jsonb topics NOT NULL "Tópicos priorizados"
        timestamp generated_at "Data de geração"
    }

    series {
        uuid id PK "Identificador único"
        varchar title NOT NULL "Título da série"
        varchar topic NOT NULL "Tópico central"
        integer episode_count DEFAULT 0 "Número de episódios"
        varchar status DEFAULT 'planning' "Status da série"
        timestamp created_at "Criação"
    }

    series_videos {
        uuid id PK "Identificador único"
        uuid series_id FK "Referência para série"
        uuid pipeline_id FK "Referência para pipeline"
        integer episode_order NOT NULL "Ordem do episódio"
        timestamp added_at "Data de adição"
    }

    assets {
        uuid id PK "Identificador único"
        varchar source NOT NULL "pexels, elevenlabs, dalle"
        varchar source_id NOT NULL "ID no source"
        text source_url "URL original"
        varchar local_path NOT NULL "Caminho local"
        varchar media_type NOT NULL "video, image, audio"
        decimal duration "Duração"
        varchar query "Query usada"
        decimal score "Score de relevância"
        timestamp cached_at "Data de cache"
    }

    settings {
        varchar key PK "Chave de configuração"
        text value NOT NULL "Valor"
        varchar description "Descrição"
        timestamp updated_at "Atualização"
    }

    %% --- Relacionamentos ---
    pipelines ||--o| video_metrics : "pode ter"
    pipelines ||--o{ series_videos : "pode pertencer a"
    series ||--o{ series_videos : "contém"
    series_videos }o--|| pipelines : "relaciona"

    %% Índices mencionados no modelo de dados
    %% idx_pipelines_status (status)
    %% idx_pipelines_niche (niche)
    %% idx_pipelines_created (created_at)
    %% idx_pipelines_video_id (video_id)
    %% idx_metrics_pipeline (pipeline_id)
    %% idx_metrics_youtube (youtube_video_id)
    %% idx_metrics_retention (retention)
    %% idx_learning_niche (niche) UNIQUE
    %% idx_plans_niche (niche)
    %% idx_plans_generated (generated_at)
    %% idx_series_topic (topic)
    %% idx_assets_source (source, source_id)
    %% idx_assets_query (query)
    %% idx_assets_type (media_type)
